# libinsdb

./: .flake8  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  README.md  RELEASE.md  libinsdb-96x24.asciinema  pyproject.toml  record-asciinema-demo.sh  tox.ini
.github/workflows/: tests.yml
docs/: cli.rst  conf.py  index.rst  installation.rst  introduction.rst  reference.rst  tutorial.rst
libinsdb/: __init__.py  __main__.py  dbobject.py  instrumentdb.py  local.py  objects.py  remote.py  version.py
tests/: test_high_level_interface.py  test_local_database.py  test_restful_interface.py
tests/mock_db/: schema.json
tests/mock_db/data_files/: 02815676-74a9-4162-90a8-8949cdb19b95_bandpass_detector_20S.csv  18190c40-d4dc-40cc-8d8f-959dc1c1cac0_bandpass_detector_20M.csv  205dcd9e-f2bc-44b6-9b4d-a41b7ba42e76_bandpass044.csv  24b9660c-b1a5-491e-916c-b9459219543e_bandpass_detector_19M.csv  26b25ee4-699d-4c91-b7a7-3e008ff0a709_bandpass070.csv  3a29d860-2289-4691-82de-1fcb4adfff0e_bandpass217.csv  3a514926-ea2e-4e69-996e-2eedc2894a1c_bandpass353.csv  3de6342d-7688-4d9c-ae84-f1216ccad186_bandpass_detector_27S.csv  43514e4a-bc6b-4a16-95f9-f1bc69f2e9cc_bandpass_detector_19S.csv  43638c42-e42c-49c0-8ee3-09218f5fa73c_bandpass545.csv  436505f3-573e-4c8c-93cb-e5260d1c62da_bandpass_detector_26S.csv  460024bb-5425-4e2d-bb41-aae7a46be20b_bandpass030.csv  6ce7a340-026f-4d14-ac14-95fc8eaaa8f2_bandpass030.csv  7ec5b87b-2785-49c6-ba28-ebcb707ebe18_orbital_parameters.xlsx  8237f6b7-0974-4221-9efb-9079eaecb4c2_bandpass143.csv  896a6499-6bf0-445d-85db-b311c27afc9a_bandpass_detector_23S.csv  9de8972a-de9f-49fc-af57-2858d21f3f38_bandpass_detector_23M.csv  9f5d864a-4571-4e54-a9d4-e2b375f411b8_bandpass353.csv  b35cc4a5-0628-4f8c-a008-e33062b8dc52_telescope-characteristics.xlsx  c4406dfc-2e09-4222-a6e3-82bfe7e82c31_bandpass857.csv  c4a3d09d-56e5-49f2-8fb1-3f26d58f3175_bandpass_detector_25M.csv  c789e9c1-ac22-42bd-a518-322f418dc5ff_bandpass_detector_22S.csv  d85fb364-56a2-4745-8139-a117d64d47f4_bandpass217.csv  (+2 more)
tests/mock_db/release_documents/: planck2018.txt
tests/mock_db_json/: schema.json
tests/mock_db_json_2/: schema.json
tests/mock_db_yaml/: schema.yaml
(+25 files in other folders)
