[tool.poetry]
name = "libinsdb"
version = "0.7.0"
description = "Library to access InstrumentDB databases"
authors = ["Maurizio Tomasi <maurizio.tomasi@unimi.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
tomlkit = "^0.12.1"
requests-mock = "^1.11.0"
coverage = "^7.3.0"
python-dateutil = "^2.8.2"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
types-requests = "^2.31.0.2"
types-python-dateutil = "^2.8.19.14"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.1.2"

[tool.pytest.ini_options]
minversion = "7.4.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
