[project]
name = "libinsdb"
version = "0.9.0"
description = "Library to access InstrumentDB databases"
authors = [{ name = "Maurizio Tomasi", email = "maurizio.tomasi@unimi.it" }]
requires-python = ">=3.10, <4"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.31.0,<3",
    "tomlkit>=0.12.1,<0.13",
    "requests-mock>=1.11.0,<2",
    "coverage>=7.3.0,<8",
    "python-dateutil>=2.8.2,<3",
    "pyyaml>=6.0.1,<7",
    "types-pyyaml>=6.0.12.12,<7",
    "rich>=14.0",
]

[project.scripts]
insdb = "libinsdb.__main__:main"

[project.optional-dependencies]
# Be sure to keep this in sync with [dependency-groups] later
docs = [
  "sphinx>=7.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "mypy~=1.4",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "types-requests>=2.31.0.2,<3",
    "types-python-dateutil>=2.8.19.14,<3",
]
docs = [
    "sphinx>=7.1.2",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.4.1"
addopts = "-ra -q"
testpaths = [
    "tests",
]
